@@ -3,12 +3,13 @@ package com.vityazev_egor;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 import com.vityazev_egor.Core.CustomLogger;
-import com.vityazev_egor.LLMs.Copilot.Copilot;
 import com.vityazev_egor.LLMs.DeepSeek;
 import com.vityazev_egor.LLMs.DuckDuck;
+import com.vityazev_egor.LLMs.Gemini;
 import com.vityazev_egor.LLMs.OpenAI;
 import com.vityazev_egor.Models.ChatAnswer;
 import com.vityazev_egor.Models.LLM;
@@ -27,7 +28,8 @@ public class Wrapper {
         Copilot,
         DuckDuck,
         OpenAI,
-        DeepSeek
+        DeepSeek,
+        Gemini
     }
 
     public enum WrapperMode{
@@ -49,27 +51,24 @@ public class Wrapper {
         this.logger = new CustomLogger(Wrapper.class.getName());
         this.driver.getXdo().calibrate();
         this.llms = Arrays.asList(
-//            new LLM(new Copilot(driver), true, LLMproviders.Copilot),
-            // auth required == false for OpenAI only means that you do not need to call "auth" method. You still have to log in in into your Google account
             new LLM(new OpenAI(driver),false, LLMproviders.OpenAI),
             new LLM(new DuckDuck(driver),false, LLMproviders.DuckDuck),
-            new LLM(new DeepSeek(driver), false, LLMproviders.DeepSeek)
+            new LLM(new DeepSeek(driver), false, LLMproviders.DeepSeek),
+            new LLM(new Gemini(driver), false, LLMproviders.Gemini)
         );
         this.preferredProvider = preferredProvider;
         this.wrapperMode = wrapperMode;
     }
 
     /**
-     * Authenticates with the specified LLM provider using the provided login and password.
+     * Authenticates with the specified LLM provider using Google Account.
      *
-     * @param provider The LLM provider to authenticate with.
-     * @param login The user's login credentials.
-     * @param password The user's password (if required).
+     * @param provider The LLM provider to authenticate with..
      * @return {@code true} if authentication is successful, {@code false} otherwise.
      */
-    public Boolean auth(LLMproviders provider, String login, String password){
+    public Boolean auth(LLMproviders provider){
         return llms.stream().filter(l -> l.getProvider() == provider).findFirst().map(l->{
-            Boolean result = l.getChat().auth(login, password);
+            Boolean result = l.getChat().auth();
             l.setAuthDone(result);
             return result;
         }).orElse(false);
@@ -83,7 +82,7 @@ public class Wrapper {
      */
     public Boolean createChat(LLMproviders provider){
         return llms.stream().filter(l -> l.getProvider() == provider).findFirst().map(l->{
-            Boolean result = l.getChat().creatNewChat();
+            Boolean result = l.getChat().createNewChat();
             if (!result) l.setGotError(true);
             return result;
         }).orElse(false);
@@ -126,26 +125,23 @@ public class Wrapper {
      * @return A {@link ChatAnswer} object containing the response from the LLM, or an empty {@link ChatAnswer} if no valid provider is available or if the LLM does not respond within the timeout period.
      */
     public ChatAnswer askLLM(String prompt, Integer timeOutForAnswer){
-        switch (wrapperMode) {
-            case ExamMode:
-                for (int i=0; i<llms.size(); i++){
-                    var workingLLM = getWorkingLLM();
-                    if (!workingLLM.isPresent()) {
-                        logger.error("There is no working providers available", null);
-                        return new ChatAnswer();
-                    }
-                    ChatAnswer answer = askLLM(workingLLM.get(), prompt, timeOutForAnswer);
-                    if (!answer.getCleanAnswer().isPresent()) {
-                        logger.error("LLM " + workingLLM.get().getProvider().name() + " didn't answer", null);
-                        continue;
-                    }
-                    answer.addPrefixToCleanAnswer(String.format("[Answer from %s provider]\n", workingLLM.get().getProvider().name()));
-                    return answer;
+        if (Objects.requireNonNull(wrapperMode) == WrapperMode.ExamMode) {
+            for (int i = 0; i < llms.size(); i++) {
+                var workingLLM = getWorkingLLM();
+                if (workingLLM.isEmpty()) {
+                    logger.error("There is no working providers available", null);
+                    return new ChatAnswer();
                 }
-        
-            default:
-                return getWorkingLLM().map(llm -> askLLM(llm, prompt, timeOutForAnswer)).orElse(new ChatAnswer());
+                ChatAnswer answer = askLLM(workingLLM.get(), prompt, timeOutForAnswer);
+                if (answer.getCleanAnswer().isEmpty()) {
+                    logger.error("LLM " + workingLLM.get().getProvider().name() + " didn't answer", null);
+                    continue;
+                }
+                answer.addPrefixToCleanAnswer(String.format("[Answer from %s provider]\n", workingLLM.get().getProvider().name()));
+                return answer;
+            }
         }
+        return getWorkingLLM().map(llm -> askLLM(llm, prompt, timeOutForAnswer)).orElse(new ChatAnswer());
     }
 
     /**
@@ -166,7 +162,7 @@ public class Wrapper {
         }
         
         return workingLLMs.stream().filter(llm -> llm.getProvider() == preferredProvider).findFirst()
-                .or(() -> Optional.ofNullable(workingLLMs.get(0)));
+                .or(() -> Optional.ofNullable(workingLLMs.getFirst()));
 
     }
 
